Fix building javadoc for cli module